Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16852

wrong cmake tab completion for CMAKE_COMPILER_IS_GNUCC

XMLWordPrintable

      The completion for GNU C compiler is CMAKE_COMPILER_IS_GNUCC. The presented version is CMAKE_COMPILER_IS_GNUC.

      As per

      message("IS_GNUC: ${CMAKE_COMPILER_IS_GNUC} IS_GNUCC: ${CMAKE_COMPILER_IS_GNUCC}")
      
      % cmake .
      IS_GNUC:  IS_GNUCC: 1
      
      % grep -roh 'CMAKE_COMPILER_IS_GNU[^) ]\+' \
          c:/Program\ Files/CMake/share/cmake-3.6/ | sort | uniq -c
            1 CMAKE_COMPILER_IS_GNU<LANG>
            1 CMAKE_COMPILER_IS_GNUC
           14 CMAKE_COMPILER_IS_GNUCC
            1 CMAKE_COMPILER_IS_GNUCC@
            2 CMAKE_COMPILER_IS_GNUCC}"
           21 CMAKE_COMPILER_IS_GNUCXX
            1 CMAKE_COMPILER_IS_GNUCXX@
            2 CMAKE_COMPILER_IS_GNUCXX}"
            5 CMAKE_COMPILER_IS_GNUG77
            1 CMAKE_COMPILER_IS_GNUG77@
            1 CMAKE_COMPILER_IS_GNULANG
      

        1. screenshot-1.png
          16 kB
          Tim Jenssen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            sthalik Stanislaw Halik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes